# reversi

./: .gitignore  Cargo.toml  report.md
src/: ai.rs  color.rs  command.rs  command_parser.rs  database.rs  main.rs  parse.rs  play.rs
