[package]
name = "reversi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
getopts = "0.2"
lazy_static = "1.4.0"
once_cell = "1.18.0"
mutex = "0.1.0"
strum_macros = "0.23.0"
strum = "0.25.0"
